# newspapers

./: .gitignore  Makefile  README.md  browser-caption.js  index.html  index.qmd  planning.docx  pyproject.toml  requirements.txt  run_pipeline.py  temp.json  test_extract.py  test_extract2.py  win95-theme.scss
.claude/: settings.local.json
analysis/: 01-newspapers-by-year.html  01-newspapers-by-year.qmd
assets/: comparison.html  theory.html
data/: kb_newspapers.csv  kb_newspapers_with_years_intermediate_10.json  kb_newspapers_with_years_intermediate_100.json  kb_newspapers_with_years_intermediate_1000.json  kb_newspapers_with_years_intermediate_1010.json  kb_newspapers_with_years_intermediate_1020.json  kb_newspapers_with_years_intermediate_1030.json  kb_newspapers_with_years_intermediate_1040.json  kb_newspapers_with_years_intermediate_1050.json  kb_newspapers_with_years_intermediate_1060.json  kb_newspapers_with_years_intermediate_1070.json  kb_newspapers_with_years_intermediate_1080.json  kb_newspapers_with_years_intermediate_1090.json  kb_newspapers_with_years_intermediate_110.json  kb_newspapers_with_years_intermediate_1100.json  kb_newspapers_with_years_intermediate_1110.json  kb_newspapers_with_years_intermediate_1120.json  kb_newspapers_with_years_intermediate_1130.json  kb_newspapers_with_years_intermediate_1140.json  kb_newspapers_with_years_intermediate_1150.json  kb_newspapers_with_years_intermediate_1160.json  kb_newspapers_with_years_intermediate_1170.json  kb_newspapers_with_years_intermediate_1180.json  kb_newspapers_with_years_intermediate_1190.json  kb_newspapers_with_years_intermediate_120.json  kb_newspapers_with_years_intermediate_1200.json  kb_newspapers_with_years_intermediate_1210.json  kb_newspapers_with_years_intermediate_1220.json  kb_newspapers_with_years_intermediate_1230.json  kb_newspapers_with_years_intermediate_1240.json  kb_newspapers_with_years_intermediate_1250.json  kb_newspapers_with_years_intermediate_1260.json  kb_newspapers_with_years_intermediate_1270.json  kb_newspapers_with_years_intermediate_1280.json  kb_newspapers_with_years_intermediate_1290.json  kb_newspapers_with_years_intermediate_130.json  (+112 more)
notebooks/: test.py  (+9 more)
(+54 files in other folders)
